# N-puzzle

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  build.sh  configure  mapgen  test.sh
inc/: Graphic.class.hpp  Node.class.hpp  Parser.class.hpp  Puzzle.class.hpp  Utils.class.hpp  npuzzle.hpp
src/: Graphic.class.cpp  Node.class.cpp  Parser.class.cpp  Puzzle.class.cpp  Utils.class.cpp  main.cpp
